
[metadata]
name = pgo
version = attr: pgo.VERSION
author = Erik Soma
author_email = stillusingirc@gmail.com
url = https://github.com/esoma/pgo
description = Profile guided optimization for Python extensions
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    
[options]
python_requires = >= 3.6
package_dir =
     = src
packages = find:
install_requires =
    setuptools
tests_require =
    cython
    pytest

[options.packages.find]
where = src
