
[metadata]
name = pgo
version = attr: pgo.__version__
author = Erik Soma
author_email = stillusingirc@gmail.com
url = https://github.com/esoma/pgo
description = Profile guided optimization for Python extensions
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    
[options]
python_requires = >= 3.6
package_dir =
     = src
packages = find:
install_requires =
    setuptools

[options.entry_points]
distutils.setup_keywords =
    pgo = pgo.setuptools.extend:pgo
    
[options.extras_require]
test =
    cython
    pytest
    pytest-cov
    mypy; python_implementation == "PyPy" and python_version >= "3.8"
    mypy; python_implementation != "PyPy" and python_version != "3.10"

[options.packages.find]
where = src
